Added macOS slices to GoSSB.xcframework

--- a/GoSSB/Sources/Makefile
+++ b/GoSSB/Sources/Makefile
@@ -1,10 +1,13 @@
 # Copyright (C) 2019 Henry Bubert <cryptix@riseup.net>. All Rights Reserved.
 
 IPHONEOS_DEPLOYMENT_TARGET ?= 13.0
+MACOS_DEPLOYMENT_TARGET ?= 11.3
+
 
 # architecture and SDK paths
 
-CFLAGS := $(if $(DEPLOYMENT_TARGET_CLANG_FLAG_NAME),-$(DEPLOYMENT_TARGET_CLANG_FLAG_NAME)=$($(DEPLOYMENT_TARGET_CLANG_ENV_NAME)),) -Wno-unused-command-line-argument
+CFLAGS := -Wno-unused-command-line-argument
+# TODO customize above per platform
 
 ARCHS_SIM = arm64 x86_64
 PLATFORM_SIM = iPhoneSimulator
@@ -20,6 +23,13 @@ EXTRA_CFLAGS_PHONE += -pipe -fvisibility=hidden $(INCLUDE) -isysroot $(SDKROOT_P
 EXTRA_CFLAGS_PHONE += -miphoneos-version-min=$(IPHONEOS_DEPLOYMENT_TARGET)
 CFLAGS_PHONE = $(CFLAGS) $(EXTRA_CFLAGS_PHONE)
 
+ARCHS_MAC = arm64 x86_64
+PLATFORM_MAC = MacOSX
+SDKROOT_MAC = $(shell xcode-select -print-path)/Platforms/$(PLATFORM_MAC).platform/Developer/SDKs/$(PLATFORM_MAC)$(MACOS_DEPLOYMENT_TARGET).sdk
+EXTRA_CFLAGS_MAC += -pipe -fvisibility=hidden $(INCLUDE) -isysroot $(SDKROOT_MAC)
+EXTRA_CFLAGS_MAC += -mmacosx-version-min=$(MACOS_DEPLOYMENT_TARGET)
+CFLAGS_MAC = $(CFLAGS) $(EXTRA_CFLAGS_MAC)
+
 CONFIGURATION_BUILD_DIR ?= $(CURDIR)/out
 CONFIGURATION_TEMP_DIR ?= $(CURDIR)/.tmp
 
@@ -32,18 +42,24 @@ BUILDDIR ?= $(CONFIGURATION_TEMP_DIR)
 
 # go architecture and platform settings
 GOARCH_arm64 := arm64
+GOARCH_x86_64 := amd64
 GOARCHSIM_arm64 := arm64
 GOARCHSIM_x86_64 := amd64
+export GOOS_MAC := darwin
 export GOOS_PHONE := ios
 export GOOS_SIM_arm64 := ios
 export GOOS_SIM_x86_64 := ios
 export CGO_ENABLED := 1
 
 # main build targets
-build: $(BUILD_DIR)/$(PLATFORM_PHONE)-arm64/libssb-go.a $(BUILD_DIR)/$(PLATFORM_SIM)-arm64_x86_64/libssb-go.a
+build: $(BUILD_DIR)/$(PLATFORM_PHONE)-arm64/libssb-go.a $(BUILD_DIR)/$(PLATFORM_SIM)-arm64_x86_64/libssb-go.a $(BUILD_DIR)/$(PLATFORM_MAC)-arm64_x86_64/libssb-go.a
 
 $(BUILD_DIR)/$(PLATFORM_SIM)-arm64_x86_64/libssb-go.a: $(foreach ARCH,$(ARCHS_SIM), $(BUILD_DIR)/$(PLATFORM_SIM)-$(ARCH)/libssb-go.a)
 	@mkdir -vp $(BUILD_DIR)/$(PLATFORM_SIM)-arm64_x86_64
+	$(LIPO) -create -output "$@" $^
+	
+$(BUILD_DIR)/$(PLATFORM_MAC)-arm64_x86_64/libssb-go.a: $(foreach ARCH,$(ARCHS_MAC), $(BUILD_DIR)/$(PLATFORM_MAC)-$(ARCH)/libssb-go.a)
+	@mkdir -vp $(BUILD_DIR)/$(PLATFORM_MAC)-arm64_x86_64
 	$(LIPO) -create -output "$@" $^
 
 
@@ -91,10 +107,18 @@ $(BUILD_DIR)/$(PLATFORM_SIM)-$(1)/libssb-go.a: *.go
 endef
 $(foreach ARCH,$(ARCHS_SIM),$(eval $(call libssb-go-sim-a,$(ARCH))))
 
-# link all the archives for all the arches into the .a file
-#$(DESTDIR)/libssb-go.a: $(foreach ARCH,$(ACTIVE_ARCHS),$(BUILDDIR)/libssb-go-$(ACTIVE_PLATFORM)-$(ARCH).a)
-#	@mkdir -vp "$(DESTDIR)"
-#	$(LIPO) -create -output "$@" $^
+# this builds multiple lib.a files for different ARCHS_MAC
+define libssb-go-mac-a
+$(BUILD_DIR)/$(PLATFORM_MAC)-$(1)/libssb-go.a: *.go
+	CGO_CFLAGS="$(CFLAGS_MAC) -arch $(ARCH)" \
+	CGO_LDFLAGS="$(CFLAGS_MAC) -arch $(ARCH)" \
+	GOARCH="$(GOARCH_$(1))" \
+	GOOS="$(GOOS_MAC)" \
+	${GO} build $(GOEXTRAFLAGS) -tags "$(GOBUILDTAGS) ios" -v -o "$(BUILD_DIR)/$(PLATFORM_MAC)-$(1)/libssb-go.a" -buildmode c-archive && ${GO} version > "$(BUILDDIR)/.gobuildversion"; \
+	ret=$$$$?; \
+	exit $$$$ret
+endef
+$(foreach ARCH,$(ARCHS_MAC),$(eval $(call libssb-go-mac-a,$(ARCH))))
 
 clean:
 	rm -rf "$(BUILDDIR)" "$(DESTDIR)/libssb-go.a" 
